--- a/package.json
+++ b/package.json
@@ -32,13 +32,37 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix '**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "plugins": [
+      "unused-imports"
+    ],
+    "rules": {
+      "@typescript-eslint/no-angle-bracket-type-assertion": "off",
+      "no-mixed-operators": 0,
+      "no-unexpected-multiline": 0,
+      "no-restricted-globals": [
+        "error",
+        "event",
+        "fdescribe"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "no-unused-vars": "off",
+      "unused-imports/no-unused-imports": "error",
+      "unused-imports/no-unused-vars": [
+        "warn",
+        { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -51,5 +75,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "tslint": "^6.1.3"
   }
 }
