--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ],
     "rules": {
       "@typescript-eslint/no-angle-bracket-type-assertion": "off",
+      "@typescript-eslint/no-unused-expressions": "off",
       "no-mixed-operators": 0,
       "no-unexpected-multiline": 0,
       "no-restricted-globals": [
@@ -60,7 +61,12 @@
       "unused-imports/no-unused-imports": "error",
       "unused-imports/no-unused-vars": [
         "warn",
-        { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+        {
+          "vars": "all",
+            "varsIgnorePattern": "^_",
+          "args": "after-used",
+          "argsIgnorePattern": "^_"
+        }
       ]
     }
   },
@@ -77,6 +83,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-unused-imports": "^1.1.5",
     "tslint": "^6.1.3"
   }
